--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ Join Us! We welcome corporate, institutional, Private Family Offices, and indivi
   
   
 		</div>
-		<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js'></script>
+		<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script type="text/javascript">
 if (jQuery(".toggle .toggle-title").hasClass("active")) {
   jQuery(".toggle .toggle-title.active")
