--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 	
 	<!-- fa-icon -->
-	
+	<link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 	<!--javascript-->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 
@@ -108,7 +108,22 @@ $(function() {
 		<p>The Sybilla Masters Fund is chartered to source, fund, and champion diverse founding teams with at least one woman in a position of strategic and operational control. The Fund is an intentional effort to increase the ability of capable teams comprising all genders and backgrounds to succeed at scalable entrepreneurship and enjoy the bounty of their efforts.</p>
 	</div>
 	</section>
-	
+	<section id = "about_us_stats">
+		<div class = "container"> 
+			<div class = "row">
+				<div class = "col-md-3 col-sm-4">
+				<img src = "" alt = "">
+				<h1> </h1>
+				</div>
+				
+				<div class = "col-md-4 col-sm-4">
+				<img src = "" alt = "">
+				<h1></h1>
+				</div>
+			</div>
+		
+		</div>
+	</section>
 	<section id = "team">
 	<h1>Meet the Sybilla Masters Team</h1>
 	<p class = "over">The Sybilla Masters Fund was founded by two industry veterans in January 2018.  As two successful trailblazers, we saw the value in investing in women and promoting gender equality in this male dominated Venture Capital Funding landscape. We already knew from our experiences that gender diversity is CRITICAL to entrepreneurial success. We created The Sybilla Masters Fund to focus on collaborating and investing in gender diverse start-ups, with at least one woman in a position of strategic and operational control, which we deem a more risk-intelligent approach to venture capital.  </p>
@@ -197,6 +212,66 @@ $(function() {
 	</div>
 	
 	</section>
+	
+	<!-- quotes -->
+	<div class = "container">
+		<h1> Diverse Funding Teams Deliver Higher ROI</h1>
+		<div class = "row">
+			<div class = "col-md-6">
+				 <blockquote><p class="quotation"> 
+  No doubt one may quote history to support any cause, as the devil quotes scripture.</p>
+<footer>— Kevin O' Leary, Sharktank</footer>
+</blockquote> 
+			</div>
+		</div>
+	</div>
+	
+	
+	<!-- stats -->
+	<h1> Our Investment Thesis: Find Unicorns in Uncrowded Fields </h1>
+	<div class = "container">
+		<div class = "row">
+			<div class = "col-md-6 col-sm-6">
+			<svg viewBox="0 0 36 36" class="circular-chart orange">
+				<path class="circle-bg"
+        d="M18 2.0845
+          a 15.9155 15.9155 0 0 1 0 31.831
+          a 15.9155 15.9155 0 0 1 0 -31.831"
+		/>
+      <path class="circle"
+        stroke-dasharray="97, 100"
+        d="M18 2.0845
+          a 15.9155 15.9155 0 0 1 0 31.831
+          a 15.9155 15.9155 0 0 1 0 -31.831"
+      />
+      <text x="18" y="20.35" class="percentage">97%</text>
+    </svg>
+	<p> More than 97% of funding at the Seed, Series A and stages beyond is controlled by – and funds – all-male, largely Caucasian, teams.</p>
+			</div>
+			
+			<div class = "col-md-6 col-sm-6">
+			<svg viewBox="0 0 36 36" class="circular-chart green">
+      <path class="circle-bg"
+        d="M18 2.0845
+          a 15.9155 15.9155 0 0 1 0 31.831
+          a 15.9155 15.9155 0 0 1 0 -31.831"
+      />
+      <path class="circle"
+        stroke-dasharray="63, 100"
+        d="M18 2.0845
+          a 15.9155 15.9155 0 0 1 0 31.831
+          a 15.9155 15.9155 0 0 1 0 -31.831"
+      />
+      <text x="18" y="20.35" class="percentage">63%</text>
+    </svg>
+	<p>Fifty-one percent of these funded teams graduate from Stanford and Harvard.</p>
+			</div>
+		</div>
+		<p>That makes funding of all-male founders from these schools a very crowded space. 
+The most valuable deals are often funded in &#39;closed door&#39; private deals between colleagues at existing VC firms, which means other investors rarely gain
+access to &#39;A&#39; grade deals. At the same time, &#39;A&#39; grade deals are being overlooked in underserved locations, founding teams, and market sectors, providing an
+opportunity for higher ROI.</p>
+	</div>
 	
 	<section id = "process">
 		<h1> Our Process </h1>
@@ -374,4 +449,46 @@ jQuery(".toggle .toggle-title").click(function() {
 
 	</section>
 	
+	<section id = "contact">
+		<div class = "container contact">
+			<div class = "row">
+				<div class = "col-md-6 investors">
+					<h1>For Investors</h1>
+					<p>Join Us! We are changing the stars for female founders and their teams.
+					</br> We welcome corporate, institutional, private family office, and individual qualified investors.</p>
+					<button class = "btn btn-danger">Investors</button>
+				</div>
+				<div class = "col-md-6">
+					<h1> For Founders & Entrepreneurs </h1>
+					<p>Sybilla Masters Fund is a gender lens investment fund seeking: </p>
+						<p><ul>
+							<li>diverse teams, with at least one woman in a position of strategic and operational control</li>
+							<li>global deal flow</li>
+							<li>unicorns in uncrowded spaces</li>
+						</ul></p>
+						
+						</br></p> If your company fits the above, please contact us using the form below.</p>
+					<button class = "btn btn-danger">Contact</button>
+				</div>
+			</div>	
+		</div>
+	</section>
+	<!--
+	<section id = "footer">
+	<div class = "footer">
+	<p> Get in touch with us <p>
+	<div class="social-icons">
+            <a href="https://www.linkedin.com/in/samprikta-basu/">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="https://github.com/sampossible">
+              <i class="fab fa-github"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+          </div>
+	</div>
+	</section>
+	-->
   </body>
