--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ opportunity for higher ROI.</p>
 							<li>unicorns in uncrowded spaces</li> 
 						</ul></p>
 						<p> If your company fits the above, please contact us using the form below.</p>
-					<div style = "text-align: center;"><button style = "border: solid 2px white; "class = "btn">Contact</button></div>
+					<div style = "text-align: center;"><button style = "border: solid 2px white; "class = "btn" href= "">Contact</button></div>
 				</div>
 			</div>	
 		</div>
