--- a/faq.html
+++ b/faq.html
@@ -1,4 +1,31 @@
-<section style = "background-color: #EEEEEE; padding-top: 5%; "id = "faq">
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Sybilla Masters Fund</title>
+
+    <!-- Bootstrap core CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+	
+	<!-- fa-icon -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+	<!--javascript-->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+
+    <!-- Custom styles for this template -->
+    <link href="style.css" rel="stylesheet">
+
+  </head>
+  
+<ul class = "nav" style="list-style-type:none; text-align: right;">
+					<div><li><a href = "index.html" class = "cool-link">Back to Home</a></li><div>
+				</ul>
+
+  
+<section style = "background-color: #fff; padding-top: 5%; "id = "faq">
 		<h1 style = "margin-bottom: -8%;"> Sybilla Masters Fund FAQ </h1>
 		<div class="container accordion"> 
   
@@ -151,6 +178,7 @@ jQuery(".toggle .toggle-title").click(function() {
 	</section>
 	
 	<style>
+	@import url('https://fonts.googleapis.com/css?family=Montserrat:500|Open+Sans:700');
 		/*faq */
 
 /* Styles for page */ 
@@ -160,12 +188,12 @@ jQuery(".toggle .toggle-title").click(function() {
 }
 
 body {
-  color: #4B4B4B;
+  color: black;
   font-family: sans-serif;
 }
 body a {
   cursor: pointer;
-  color: #4B4B4B;
+  color: black;
   text-decoration: none;
 }
 
@@ -225,7 +253,41 @@ p {
 .toggle .toggle-title.active i {
   background: url("http://arielbeninca.com/Storage/plus_minus.png") 0px 0px no-repeat;
 }
+.nav {
+	position: absolute;
+	top: 3%;
+	right: 5%;
+}
+.nav ul div li{
+	text-align: right;
+    
+}
 
+
+ 
+.nav li a {
+	text-decoration: none;
+    display: inline-block;
+	color: black;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    padding-top: 2px;
+	font-size: 14px;
+}
+
+.cool-link::after {
+	content: "";
+    display: block;
+    width: 0;
+    height: 2px;
+    background: #D0ECE7;
+    transition: width .3s;
+}
+
+.cool-link:hover::after {
+	width: 100%;
+    transition: width .3s;
+}
 
 	</style>
 	
