--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	</section>
 
 	<section style = "padding-top: 5%;
-	padding-bottom: 5%;" id = "#portfolio" class = "blue">
+	padding-bottom: 5%;" id = "portfolio" class = "blue">
 		<h1>Portfolio</h1>
 	</section>
 	
