--- a/index.html
+++ b/index.html
@@ -31,15 +31,16 @@
   <section class="hero">
         <div class="container" style = "position: relative;">
 			<div class = "row">
-			<div class = "logo col-md-6 col-sm-6">
-				<img src = "images/smflogo.svg" width = "350" height = "275" alt "sybilla masters fund logo">
+			<div style = "text-align: left; padding-right: 5%;" class = "logo col-md-6 col-sm-6">
+				<img style = "padding-left: -20%; padding-bottom: 5%;" src = "images/smftransparent.png" width = "300" height = "200" alt "sybilla masters fund logo">
 			</div>
 			<div class = "col-md-6 col-sm-6">
 				<ul class = "nav" style="list-style-type:none; text-align: right;">
-					<div><li><a href = "" class = "cool-link">Home</a></li><div>
+					<div><li><a href = "#about" class = "cool-link">About Us</a></li><div>
+					<div><li><a href = "#team" class = "cool-link">Our Team</a></li></div>
+					<div><li><a href = "" class = "cool-link">Our Fund</a></li></div>
+					<div><li><a href = "#where" class = "cool-link">Where We Invest</a></li></div>
 					<div><li><a href = "#portfolio" class = "cool-link">Portfolio</a></li></div>
-					<div><li><a href = "#team" class = "cool-link">Team</a></li></div>
-					<div><li><a href = "#about-us" class = "cool-link">About</a></li></div>
 					<div><li><a href = "faq.html" class = "cool-link">FAQ</a></li></div>
 					<div><li><a href = "#contact" class = "cool-link">Contact</a></li></div>
 				</ul>
@@ -51,20 +52,16 @@
 		</div>
     </section>
 	
-	<section id = "">
+	<section id = "about">
 	<div class="text-intro">
 	<h1>Sybilla Masters Fund</h1>
-		<p>The Sybilla Masters Fund is chartered to source, fund, and champion diverse founding teams with at least one woman in a position of strategic and operational control. The Fund is an intentional effort to increase the ability of capable teams comprising all genders and backgrounds to succeed at scalable entrepreneurship and enjoy the bounty of their efforts.</p>
+		<p style = "padding-top: 5%; padding-bottom: 20%;">The Sybilla Masters Fund is chartered to source, fund, and champion diverse founding teams with at least one woman in a position of strategic and operational control. The Fund is an intentional effort to increase the ability of capable teams comprising all genders and backgrounds to succeed at scalable entrepreneurship and enjoy the bounty of their efforts.</p>
 	</div>
 	</section>
-
-	<section style = "padding-top: 5%;
-	padding-bottom: 5%;" id = "portfolio" class = "blue">
-		<h1>Portfolio</h1>
-	</section>
+	
 	
 	<section id = "team">
-	<div>
+	<div class = "blue" style= "padding-top: 5%; padding-bottom: 5%;">
 	<h1>Meet the Sybilla Masters Team</h1>
 	<p class = "over">The Sybilla Masters Fund was founded by two industry veterans in January 2018.  As two successful trailblazers, we saw the value in investing in women and promoting gender equality in this male dominated Venture Capital Funding landscape. We already knew from our experiences that gender diversity is CRITICAL to entrepreneurial success. We created The Sybilla Masters Fund to focus on collaborating and investing in gender diverse start-ups, with at least one woman in a position of strategic and operational control, which we deem a more risk-intelligent approach to venture capital.  </p>
 	</div>
@@ -259,7 +256,7 @@ capable female founders building high potential, scalable corporations.</p>
 	<!-- end our story -->
 	
 	<!-- quotes -->
-	<section class = "orange1">
+	<section id = "where" class = "orange1">
 	<div style = "padding-top: 5%; padding-bottom: 5%;" class = "container">
 		<h1> Diverse Funding Teams Deliver Higher ROI</h1>
 		<div class = "row">
@@ -444,7 +441,10 @@ opportunity for higher ROI.</p>
 		<p style = "text-align: center;">Founders benefit from a clean CAP table. We can include riders to be able to participate in follow on rounds, should the company reach a point of inflection indicating that equity funding is in order.</p>
 	</div>
 	
-	
+	<section style = "padding-top: 5%;
+	padding-bottom: 5%;" id = "portfolio" class = "blue">
+		<h1>Portfolio</h1>
+	</section>
 	
 	<section style = "padding-bottom: 5%;" id = "contact" class = "orange1">
 	<h1 style = "padding-top: 5%; padding-bottom: 3%;">Contact Us </h1>
